--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ README.html
 *.png
 .Rhistory
 slurm*
-27-Nov-23_variants_in_ld_dosage.txt
-30-Nov-23_cumulative_variance_explained_by_each_pc.txt
+*.txt
+*.pdf
